# HiveGame

./: .~lock.game_results.csv#  BUGGI  CMakeLists.txt  Co-nie-działa-jak-powinno.txt  DZIENNIK  README.md  UML.puml  co_musze_zrobić  game_results.db  heat.py  proste  pup  weekend
ai/: AiAlgorithm.cpp  AiAlgorithm.hpp  AlphaBethaSearch.cpp  AlphaBethaSearch.hpp  CMakeLists.txt  Heuristic.hpp  Pvs.cpp  Pvs.hpp  RandomAi.cpp  RandomAi.hpp
ai_tests/: AiTester.cpp  AiTester.hpp  CMakeLists.txt  DataBase.cpp  DataBase.hpp
client/: AiClient.cpp  CMakeLists.txt  Client.cpp  Client.hpp  HumanClient.cpp
engine/: CMakeLists.txt  Game.cpp  Game.h  HiveBoard.cpp  HiveBoard.h  HiveGameEngine.h  Player.cpp  Player.h
engine/Pieces/: Ant.cpp  Ant.h  Beetle.cpp  Beetle.h  GrassHopper.cpp  GrassHopper.h  Piece.h  QueenBee.cpp  QueenBee.h  Spider.cpp  Spider.h
engine/Tiles/: Ant.cpp  Ant.h  Beetle.cpp  Beetle.h  GrassHopper.cpp  GrassHopper.h  QueenBee.cpp  QueenBee.h  Spider.cpp  Spider.h  Tile.h
engine/include/: Action.hpp  ActionHandler.hpp  ActionParser.hpp  ArticulationPoints.hpp  BaseBoard.hpp  Board.hpp  FileOperations.hpp  Game.h  Game.hpp  HiveBoard.h  HiveBoard.hpp  HiveGameEngine.hpp  MoveValidator.hpp  MovementFunctions.hpp  MovementManager.hpp  Player.h  Player.hpp  Position.hpp  Tile.hpp  TurnManager.hpp  dfs.hpp
engine/include/Tiles/: Ant.h  Ant.hpp  Beetle.h  Beetle.hpp  EmptyTile.h  EmptyTile.hpp  GrassHopper.h  GrassHopper.hpp  Grasshopper.hpp  Piece.h  Piece.hpp  Queen.hpp  QueenBee.h  QueenBee.hpp  Spider.h  Spider.hpp  Tile.cpp  Tile.h  Tile.hpp
engine/src/: ActionHandler.cpp  ArticulationPoints.cpp  BaseBoard.cpp  Board.cpp  FileOperations.cpp  Game.cpp  HiveBoard.cpp  MoveValidator.cpp  MovementFunctions.cpp  MovementManager.cpp  Player.cpp  Tile.cpp  TurnManager.cpp  dfs.cpp
gameViewer/: CMakeLists.txt  GameViewer.cpp  GameViewer.hpp  main.cpp
gui/: CMakeLists.txt
gui/include/: BaseInterface.hpp  BoardDrawable.hpp  Button.hpp  GUI.h  GUI.hpp  GameController.hpp  GameWindow.hpp  HexDrawable.hpp  Menu.hpp  PieceSelector.hpp  ResourceManager.hpp
gui/src/: BaseInterface.cpp  BoardDrawable.cpp  Button.cpp  GUI.cpp  GameController.cpp  GameWindow.cpp  HexDrawable.cpp
main/: CMakeLists.txt  main.cpp
results/: bf.txt  cache.txt
scripts/: bf.py  calculate.sh  sa.py
server/: CMakeLists.txt  server.cpp
temp/: hex_grid  prog.cpp
tests/: ActionGeneratorTest.cpp  ActionParserTests.cpp  AntTest.cpp  ArticulationPointsTest.cpp  BaseTest.hpp  BeetleTest.cpp  BoardTest.cpp  CMakeLists.txt  GameInitialisationTest.cpp  GameTest.cpp  GrasshopperTest.cpp  HV-SmartBot-quest.txt  PieceMovementTest.cpp  QueenBeeTest.cpp  SpiderTest.cpp  TileMovementTest.cpp  WholeGamesTest.cpp  filtered_moves.txt  filtered_moves2.txt  filtered_moves3.txt  oficialgame3.txt  randomgame.txt  test_GameEngine.cpp  test_GameLogic.cpp
